src/test/ui/consts/const-eval/promoted_const_fn_fail.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/promoted_const_fn_fail.rs:20:27
   |
LL |     let x: &'static u8 = &(bar() + 1);
   |                           ^^^^^^^^^^^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
